# swk-embedded-lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile
cppsrc/uEmbedded/: delegate.hpp
src/: allocator.h  assert.c  assert.h  event-procedure.c  event-procedure.h  fslist.c  fslist.h  lock.h  queue_allocator.c  queue_allocator.h  timer_logic.c  timer_logic.h  timerlogic.h  transceiver.h  uemb_assert.c
src-embedded-clib/: fslist.c
src/include/: fslist.h
src/include/swk-embedded-c/: fslist.h  macro.h
src/uEmbedded/: algorithm.c  algorithm.h  allocator.c  allocator.h  btree.c  btree.h  delegate.c  delegate.h  event-helper.hxx  event-procedure.c  event-procedure.h  fslist.c  fslist.h  lock.h  managed_object_pool.c  managed_object_pool.h  managed_reference_pool.c  managed_reference_pool.h  priority_queue.c  priority_queue.h  queue_allocator.c  queue_allocator.h  queue_buffer.c  queue_buffer.h  ring_buffer.c  ring_buffer.h  timer_logic.c  timer_logic.h  transceiver.h  uassert.c  uassert.h  uemb_assert.h
src/uEmbedded-pp/: __falist_base.hpp  __fslist_base.hxx  delegate.hxx  list.cpp  list.hpp  placeholder.cpp  static_fslist.hxx  static_timer_logic.hxx  timer_logic.hxx  timer_logic__.hxx  uassert.h  utility.hxx
src/uEmbedded-pp/math/: __matrix_base.hpp  matrix_static.hpp  matrix_stream_utility.hpp  matrix_utility.hpp
testapp/: use.c
testcase/: test-algorithm.cpp  test-delegate.cpp  test-fslist.cpp  test-math-matrix.cpp  test-objpool.cpp  test-pqueue.cpp  test-queue-allocator.cpp  test-queue.cpp  test-refpool.cpp  test-timer_logic.cpp
